--- a/assets/css/quick-website.css
+++ b/assets/css/quick-website.css
@@ -1605,6 +1605,7 @@ pre code
 
         flex: 0 0 100%;
     }
+
     .order-md-first
     {
         order: -1;
@@ -6024,6 +6025,7 @@ input[type='button'].btn-block
     border-radius: .75rem; 
     background-color: #eff2f6;
     background-clip: border-box;
+		
 }
 .card > hr
 {
@@ -27980,3 +27982,235 @@ section
 }
 
 /*# sourceMappingURL=quick-website.css.map */
+
+.display-5
+{
+    font-weight: 200;
+    line-height: 1.3;
+}
+
+.display-6
+{ 
+	  font-size: 1.75rem;
+    font-weight: 200;
+    line-height: 1.3;
+}
+
+.display-7
+{ 
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: 1.3;
+}
+
+.display-8
+{ 
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: 1.5;
+}
+
+.col-48
+{
+    max-width: 48%; 
+    flex: 0 0 48%;
+}
+.col-4
+{
+    max-width: 2%; 
+    flex: 0 0 2%;
+		padding-left: 1%;
+}
+
+.col-20
+{
+    max-width: 20%; 
+    flex: 0 0 20%;
+		
+		/* width: 80px; */
+		margin-left: 10px;
+		margin-right: 10px;
+}
+
+.col-80
+{
+    max-width: 80%; 
+    flex: 0 0 80%;
+		
+		/* width: 300px;*/
+		height: 140px; 
+}
+.col-80 p {
+		/* width: 300px; */
+}
+
+.contract-circle {
+    height: 7px;
+    width: 7px;
+    border-radius: 50%; 
+		border: 1px solid #ccc;
+}
+.contract-line {
+    /* float:left; */
+		width: 1px;
+		height: 100%; 
+		background: #ccc;
+		margin-left: 3px;
+}
+
+.red {
+	color: #df2525;
+}
+
+.green {
+	color: #22cc8a;
+}
+
+.ico-img {
+	width: 80px;
+	height: 80px;
+	background: url('contract_ico.png') no-repeat;
+}
+
+.contract-tl-strong
+{
+    font-weight: bold;
+		color: #000;
+}
+
+.card-body-s
+{
+    min-height: 1px;
+    padding: 1.75rem;
+    color: #eff2f6; 
+    flex: 1 1 auto;
+    /* height: 300px; */
+		width: 350px;	
+}
+.card-body-s h6 {
+		height: 60px;
+}
+
+.card-body-m-l
+{
+    min-height: 1px;
+	  margin-left: auto;
+		padding-right: 5px;
+}
+
+.card-body-m-r
+{
+    min-height: 1px;
+    /* padding: 1.75rem; */
+		/* padding:5; */
+    /* flex: 1 1 auto; */
+    /* height: 300px; */
+		/* width: 100%; */
+		
+	  /* flex:1;
+		text-align: right;
+		right: 0px; */
+	  margin-left: 0;
+		padding-left: 5px;
+}
+
+.card-bg-w
+{
+    background-color: #fff;
+		/* background-color: rgba(0, 0, 0, .0); */
+}
+
+.card-align-c
+{
+    align-items:center;
+}
+
+.card-align-r
+{
+    align-items:
+}
+
+.card-tl-pd
+{
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+
+.ico-img-security {
+	width: 50px;
+	height: 50px;
+	background: url('security_ico.png') no-repeat;
+}
+
+.line-security {
+	border-top: 1px solid #ccc;
+}
+
+.row-contract
+{
+    display: flex;
+		/* padding: 5px; */
+    width: 400px;
+    /* flex-wrap: wrap; */
+		
+		/* align-items: center; */
+		justify-content: center;
+}
+
+@media (max-width: 575.98px)
+{
+  .col-48
+	{
+			max-width: 90%; 
+			flex: 0 0 90%;
+	}
+	.col-4
+	{
+			max-width: 2%; 
+			flex: 0 0 2%;
+			padding-left: 1%;
+	}
+}	
+
+@media (max-width: 575.98px)
+{
+  .col-48
+	{
+			max-width: 90%; 
+			flex: 0 0 90%;
+	}
+	.col-4
+	{
+			max-width: 2%; 
+			flex: 0 0 2%;
+			padding-left: 1%;
+	}
+}	
+
+@media (max-width: 767.98px) {
+  .col-48
+	{
+			max-width: 90%; 
+			flex: 0 0 90%;
+	}
+	.col-4
+	{
+			max-width: 2%; 
+			flex: 0 0 2%;
+			padding-left: 1%;
+	}
+}	
+
+@media (max-width: 991.98px){
+  .col-48
+	{
+			max-width: 90%; 
+			flex: 0 0 90%;
+	}
+	.col-4
+	{
+			max-width: 2%; 
+			flex: 0 0 2%;
+			padding-left: 1%;
+	}
+}	
